<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_price"
        android:title="price" />
    <item
        android:id="@+id/menu_a_z"
        android:title="A->Z" />
    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="Order"
        app:showAsAction="ifRoom" />
    <item
...
