...
        android:id="@+id/taxValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="taxValue" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

  </LinearLayout>

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:text="Check OUT !"
      app:layout_constraintBottom_toBottomOf="parent"
...
