...
                    android:background="@drawable/info_bg"
                    android:text="TextView"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/stock"
                    android:layout_width="89dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
...
        app:backgroundTint="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butButton"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
...
